--- a/package.json
+++ b/package.json
@@ -9,21 +9,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.1.0",
-    "@angular/common": "^14.1.0",
-    "@angular/compiler": "^14.1.0",
-    "@angular/core": "^14.1.0",
-    "@angular/forms": "^14.1.0",
-    "@angular/platform-browser": "^14.1.0",
-    "@angular/platform-browser-dynamic": "^14.1.0",
-    "@angular/router": "^14.1.0",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "@angular/animations": "14.1.0",
+    "@angular/common": "14.1.0",
+    "@angular/compiler": "14.1.0",
+    "@angular/core": "14.1.0",
+    "@angular/forms": "14.1.0",
+    "@angular/platform-browser": "14.1.0",
+    "@angular/platform-browser-dynamic": "14.1.0",
+    "@angular/router": "14.1.0",
+    "rxjs": "7.5.6",
+    "tslib": "2.4.0",
+    "zone.js": "0.11.7"
   },
   "devDependencies": {
-    "@angular/cli": "~14.1.0",
-    "@angular/compiler-cli": "^14.1.0",
-    "typescript": "~4.7.2"
+    "@angular-devkit/build-angular": "14.1.0",
+    "@angular/cli": "14.1.0",
+    "@angular/compiler-cli": "14.1.0",
+    "ng-packagr": "14.1.0",
+    "typescript": "4.7.4"
   }
 }
