--- a/package.json
+++ b/package.json
@@ -9,24 +9,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "14.1.0",
-    "@angular/common": "14.1.0",
-    "@angular/compiler": "14.1.0",
-    "@angular/core": "14.1.0",
-    "@angular/forms": "14.1.0",
-    "@angular/platform-browser": "14.1.0",
-    "@angular/platform-browser-dynamic": "14.1.0",
-    "@angular/router": "14.1.0",
-    "@ngx-formly/core": "6.0.0-rc.2",
+    "@angular/animations": "14.2.1",
+    "@angular/common": "14.2.1",
+    "@angular/compiler": "14.2.1",
+    "@angular/core": "14.2.1",
+    "@angular/forms": "14.2.1",
+    "@angular/platform-browser": "14.2.1",
+    "@angular/platform-browser-dynamic": "14.2.1",
+    "@angular/router": "14.2.1",
+    "@ngx-formly/core": "6.0.0",
     "rxjs": "7.5.6",
     "tslib": "2.4.0",
-    "zone.js": "0.11.7"
+    "zone.js": "0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "14.1.0",
-    "@angular/cli": "14.1.0",
-    "@angular/compiler-cli": "14.1.0",
-    "ng-packagr": "14.1.0",
-    "typescript": "4.7.4"
+    "@angular-devkit/build-angular": "14.2.2",
+    "@angular/cli": "14.2.2",
+    "@angular/compiler-cli": "14.2.1",
+    "ng-packagr": "14.2.1",
+    "typescript": "4.8.3"
   }
 }
