--- a/projects/formly-custom/package.json
+++ b/projects/formly-custom/package.json
@@ -2,12 +2,12 @@
   "name": "formly-custom",
   "version": "0.0.1",
   "peerDependencies": {
-    "@angular/common": "^14.1.0",
-    "@angular/core": "^14.1.0",
-    "@angular/forms": "^14.1.0",
-    "@ngx-formly/core": "6.0.0-rc.2"
+    "@angular/common": "^14.2.1",
+    "@angular/core": "^14.2.1",
+    "@angular/forms": "^14.2.1",
+    "@ngx-formly/core": "6.0.0"
   },
   "dependencies": {
-    "tslib": "^2.3.0"
+    "tslib": "^2.4.0"
   }
 }
